# pycudafideslib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.py  build.sh  estimate_ranges.py  gen_config.py  main.py  polyeval.py  prepare_gpt2_weights.py  pyproject.toml  raw_result.csv  remez_cli.py  run_bench.sh  test_bootstrap.py
build_sm80/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_sm80/Testing/Temporary/: CTestCostData.txt
build_sm80/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: attention.h  ckks_primitives.h  fideslib_wrapper.h  gpt2.h  gpt2_config.h  gpt2_optimized_config.h  inference.h  llama.h  nonlinear.h
logs/slurm/: 38206775.out  38206776.out  38206838.out  38206839.out  38247401.out  38247777.err  38247777.out  38247904.out  38248352.out  38251731.out  38252259.out  38252716.out  38253201.out  38253353.out  38253374.out  38253468.out  38253526.out  38253557.out  38253570.out
scripts/: 00_check_env.sh  01_install_deps.sh  02_build.sh  03_gen_weights.sh  03_run_tests.sh  03_test_all.sh  03a_test_linear.sh  04_build_and_test.sh  04_gen_test_vectors.sh  05_test_nonlinear.sh  06_test_gpt2_real.sh  07_test_all.sh  08_bench.sh  09_gen_config.sh  10_test_decoder.sh  11_test_model.sh  12_generate_text.sh  submit_all.sh  tokenize_input.py
src/: attention.cu  bootstrap.cu  gpt2.cu  linear.cu  linear_utils.cu  llama.cu  main.cu  nonlinear.cu  poly_eval.cu  primitives.cu
tests/: CMakeLists.txt  debug_bsgs.py  generate_gpt2_test_vectors.py  gka_kv_cache.py  linear.py  poly_approx.cu  python_kv_cache.py  python_kv_cache_2.py  sim_correct copy.py  sim_correct.py  sim_correct.py.bkp  test_basic_functions.cu  test_basics.cu  test_basics.h  test_bootstrap.cu  test_bsgs_linear.py  test_depth_budget.cu  test_gen_config.py  test_gpt2_real.cu  test_linear.cu  test_llama.cu  test_mha_e2e.cu  test_mha_kcache.cu  test_mha_o_proj.cu  test_mha_qkv.cu  test_mha_softmax.cu  test_mha_vcache.cu  test_mlp_e2e.cu  test_non_linear.cu  test_non_linear.h  test_nonlinear.cu  test_ops.cu  test_poly_approx.cu  test_poly_approx_time.cu  test_primitives.cu  test_primitives_time.cu  test_remez_taylor.cu
tests.bkp/: test_bootstrap.cu  test_ops.cu
